fix: move index.html to project root to enable GitHub Pages deployment
GitHub Pages requires index.html at the repository root.
Updated internal links and image paths to match the new structure.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Odin Recipes</h1>
 
         <ul>
-            <li><a href="onigiri.html">Onigiri Recipe</a></li>
-            <li><a href="onigirazu.html">Onigirazu Recipe</a></li>
-            <li><a href="temaki.html">Temaki Recipe</a></li>
-            <li><a href="uramaki.html">Uramaki Recipe</a></li>
+            <li><a href="recipes/onigiri.html">Onigiri Recipe</a></li>
+            <li><a href="recipes/onigirazu.html">Onigirazu Recipe</a></li>
+            <li><a href="recipes/temaki.html">Temaki Recipe</a></li>
+            <li><a href="recipes/uramaki.html">Uramaki Recipe</a></li>
         </ul>
 
     </body>
