--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
 
         <h1>Onigiri Recipe</h1>
 
